# curseforge-dl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/curseforge_dl/: __init__.py  api.py  cli.py  fingerprint.py  installer.py  models.py  url.py
tests/: test_fingerprint.py  test_models.py  test_url.py
